--- a/sample-viewer/src/app/home/home.component.scss
+++ b/sample-viewer/src/app/home/home.component.scss
@@ -125,7 +125,7 @@ a {
 }
 
 .intro-section {
-margin: -18px -63px;
+  margin: -18px -63px;
 }
 
 #sharing-good {
@@ -138,6 +138,7 @@ margin: -18px -63px;
   justify-content: space-between;
 }
 
+.counts,
 .section-link {
   flex: 1;
   padding: 10px;
@@ -153,6 +154,10 @@ margin: -18px -63px;
   }
 }
 
+.section-link {
+  flex-grow: 1000;
+}
+
 .patient {
   background: $ebola-md;
 }
@@ -163,6 +168,49 @@ margin: -18px -63px;
 
 .data {
   background: $lassa-md;
+}
+
+.count-pair {
+  align-items: center;
+}
+
+.count-label {
+  color: white;
+}
+
+.count-value {
+  font-size: 2.5em;
+  margin-right: 15px;
+}
+
+#dataset {
+  & .counts {
+    background: $lassa-dk;
+  }
+
+  & .count-value {
+    color: $lassa-lt;
+  }
+}
+
+#patient {
+  & .counts {
+    background: $ebola-color;
+  }
+
+  & .count-value {
+    color: $ebola-lt;
+  }
+}
+
+#sample {
+  & .counts {
+    background: accent-redder(800);
+  }
+
+  & .count-value {
+    color: accent-redder(100);
+  }
 }
 
 .section-title {
@@ -183,7 +231,7 @@ i.section-icon {
 }
 
 .patient .section-icon {
-  color: $ebola-color;
+  color: $ebola-dk;
 }
 
 .data .section-icon {
@@ -218,5 +266,9 @@ i.section-icon {
 }
 
 .who-are-we {
-    margin-top: 50px;
+  margin-top: 50px;
+}
+
+.link-container {
+  flex-grow: 1;
 }
