--- a/sample-viewer/src/app/dataset/file-list/file-list.component.html
+++ b/sample-viewer/src/app/dataset/file-list/file-list.component.html
@@ -47,6 +47,14 @@
       </td>
     </ng-container>
 
+    <!-- Metadata Column -->
+    <ng-container matColumnDef="metadata">
+      <th mat-header-cell *matHeaderCellDef>File metadata</th>
+      <td mat-cell *matCellDef="let element">
+<a (click)="selectRow(element)">show metadata</a>
+      </td>
+    </ng-container>
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="anything_selected ? (row === selectedRow ? 'active' : 'inactive') : 'active'"></tr>
