--- a/sample-viewer/src/app/dataset/file-list/file-list.component.html
+++ b/sample-viewer/src/app/dataset/file-list/file-list.component.html
@@ -49,7 +49,7 @@
 
     <!-- Metadata Column -->
     <ng-container matColumnDef="metadata">
-      <th mat-header-cell *matHeaderCellDef>File metadata</th>
+      <th mat-header-cell *matHeaderCellDef>File properties</th>
       <td mat-cell *matCellDef="let element">
 <a (click)="selectRow(element)">show metadata</a>
       </td>
