add CIV, MLI, TGO .shp

--- a/sample-viewer/src/app/filters/filter-location/filter-location.component.scss
+++ b/sample-viewer/src/app/filters/filter-location/filter-location.component.scss
@@ -29,6 +29,18 @@
   fill: $liberia-red;
 }
 
+.CI-icon {
+  fill: $cote-divoire-orange;
+}
+
+.TG-icon {
+  fill: $togo-yellow;
+}
+
+.ML-icon {
+  fill: $mali-red;
+}
+
 .unknown-icon {
   color: $grey-400;
 }
