--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -69,3 +69,8 @@ $liberia-blue: #002868;
 $guinea-yellow: #FCD116;
 $guinea-red: #CE1126;
 $guinea-green: #009460;
+$mali-red: #CE1126; // from https://www.schemecolor.com/mali-flag-colors.php
+$mali-green: #14B53A;
+$mali-yellow: #FCD116;
+$cote-divoire
+$togo
