--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -262,6 +262,18 @@ svg-icon.country-icon {
   &.LR {
     fill: $liberia-red;
   }
+
+  &.TG {
+    fill: $togo-yellow;
+  }
+
+  &.ML {
+    fill: $mali-red;
+  }
+
+  &.CI {
+    fill: $cote-divoire-orange;
+  }
 }
 
 .hla-icon,
