add Togo, Mali, Cote d'Ivoire colors

--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -72,5 +72,8 @@ $guinea-green: #009460;
 $mali-red: #CE1126; // from https://www.schemecolor.com/mali-flag-colors.php
 $mali-green: #14B53A;
 $mali-yellow: #FCD116;
-$cote-divoire
-$togo
+$cote-divoire-orange: #F77F00; // from https://www.schemecolor.com/ivory-coast-flag-colors.php
+$cote-divoire-green: #009E60;
+$togo-red: #D21034;
+$togo-green: #006A4E;
+$togo-yellow: #FFCE00;
