--- a/sample-viewer/src/app/patient-page/patient-citations/patient-citations.component.html
+++ b/sample-viewer/src/app/patient-page/patient-citations/patient-citations.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="publications && publications.length > 0; else no_citations">
-  <app-format-citation [citations]="publications" simplifiedCitation="false" class="citation-group"></app-format-citation>
+  <app-format-citation [citations]="publications" [simplifiedCitation]="false" class="citation-group"></app-format-citation>
 </div>
 
 <ng-template #no_citations>
