--- a/sample-viewer/src/app/format-citation/format-citation.component.html
+++ b/sample-viewer/src/app/format-citation/format-citation.component.html
@@ -2,7 +2,7 @@
   <div *ngFor="let citation of citations" class="container" [ngClass]="{'container-column': !simplifiedCitation}">
     <div class="citation">
       <span id="title" *ngIf="simplifiedCitation === false">
-        <a [href]="'https://doi.org/' + citation.doi" target="_blank" rel="noreferrer">
+        <a [href]="citation.url" target="_blank" rel="noreferrer">
           <span [outerHTML]="citation.name"></span>
         </a>.
       </span>
@@ -16,14 +16,24 @@
       </ng-container>
 
       <ng-template #firstAuthor>
-        <span id="authors">
-          <a [href]="citation.url" target="_blank" rel="noreferrer">
-            {{citation.author[0].givenName}} {{citation.author[0].familyName}}
-            <i>et al.</i>
-          </a>
+        <span id="authors" *ngIf="simplifiedCitation === true; else linkedAuthor">
+          {{citation.author[0].givenName}} {{citation.author[0].familyName}}
+          <i>et al.</i>
         </span>
-        <span id="journal"><i>{{citation.journalNameAbbrev}}</i></span>
+        <span id="journal"><i>{{citation.journalName}}</i></span>
+
+        <ng-template #linkedAuthor>
+          <span id="authors" *ngIf="simplifiedCitation === true; else linkedAuthor">
+            <a [href]="citation.url" target="_blank" rel="noreferrer">
+              {{citation.author[0].givenName}} {{citation.author[0].familyName}}
+              <i>et al.</i>
+            </a>
+          </span>
+          <span id="journal"><i>{{citation.journalNameAbbrev}}</i></span>
+        </ng-template>
+
       </ng-template>
+
 
       <span id="date" *ngIf="citation.datePublished">{{citation.datePublished}}</span>,
 
