--- a/sample-viewer/src/app/format-citation/format-citation.component.html
+++ b/sample-viewer/src/app/format-citation/format-citation.component.html
@@ -15,6 +15,23 @@
         <span id="journal"><i>{{citation.journalName}}</i></span>
       </ng-container>
 
+      <ng-template #firstAuthor>
+        <span id="authors" *ngIf="simplifiedCitation === true">
+          <a [href]="citation.url" target="_blank" rel="noreferrer">
+            {{citation.author[0].givenName}} {{citation.author[0].familyName}}
+            <i>et al.</i>
+          </a>
+        </span>
+        <span id="authors" *ngIf="simplifiedCitation === false">
+          {{citation.author[0].givenName}} {{citation.author[0].familyName}}
+          <i>et al.</i>
+        </span>
+
+        <span id="journal" *ngIf="simplifiedCitation === false"><i>{{citation.journalName}}</i></span>
+        <span id="journal" *ngIf="simplifiedCitation === true"><i>{{citation.journalNameAbbrev}}</i></span>
+      </ng-template>
+
+
       <span id="date" *ngIf="citation.datePublished">{{citation.datePublished}}</span>,
 
       <span id="vol">{{citation.volumeNumber}}</span>, <span id="issue">{{citation.issueNumber}}</span>, <span id="page">{{citation.pagination}}</span>.
@@ -28,23 +45,4 @@
     </div>
 
   </div>
-
-  <ng-template #firstAuthor>
-    <span id="authors" *ngIf="simplifiedCitation === true; else linkedAuthor">
-      {{citation.author[0].givenName}} {{citation.author[0].familyName}}
-      <i>et al.</i>
-    </span>
-    <span id="journal"><i>{{citation.journalName}}</i></span>
-  </ng-template>
-
-  <ng-template #linkedAuthor>
-    <span id="authors" *ngIf="simplifiedCitation === true; else linkedAuthor">
-      <a [href]="citation.url" target="_blank" rel="noreferrer">
-        {{citation.author[0].givenName}} {{citation.author[0].familyName}}
-        <i>et al.</i>
-      </a>
-    </span>
-    <span id="journal"><i>{{citation.journalNameAbbrev}}</i></span>
-  </ng-template>
-
 </ng-container>
