--- a/sample-viewer/src/app/footer/footer.component.html
+++ b/sample-viewer/src/app/footer/footer.component.html
@@ -6,15 +6,13 @@
 
       <div class="contact-info container-column column">
         <a routerLink="/about"><h4>CViSB Data Portal Partners</h4></a>
-        <a [href]="contactInfo.url">
+        <a [href]="contactInfo.url" target="_blank" rel="noreferrer">
           <img src="/assets/img/cvisb_icon_300px.png" class="logo" />
         </a>
 
-        <a [href]="contactInfo.url">
           <img src="/assets/img/kgh_400x110.png" class="logo" />
-        </a>
 
-        <a [href]="contactInfo.url">
+        <a href="http://health.gov.sl/" rel="noreferrer" target="_blank">
           <img src="/assets/img/SL_MOH.png" class="logo" />
         </a>
       </div>
