--- a/sample-viewer/src/app/admin/about-data/about-data.component.html
+++ b/sample-viewer/src/app/admin/about-data/about-data.component.html
@@ -1,7 +1,7 @@
 <div class="centered about-text">
   <h1>Everything you need to know about the data</h1>
 
-  <h3 class="emphasis-title">We strongly believe not only in making data open, but actually making it <span class="emphasis">useful</span> to other people.</h3>
+  <h3 class="emphasis-title">We strongly believe not only in making data open, but also in making it <span class="emphasis">useful</span> to other people.</h3>
   <p>To that end, we've done our best to document where these data come from, what they mean, and any known limitations about how they should be used.</p>
   <p>Think we're missing something? Please let us know at
     <a href="mailto:info@cvisb.org?subject=metadata documentation">info@cvisb.org</a>
