fix age rounding

--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -89,7 +89,7 @@
     <ng-container matColumnDef="age">
       <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">age</th>
       <td mat-cell *matCellDef="let element">
-        {{element.age | number: "1.0.1"}}
+        {{element.age | number: "1.0-1"}}
       </td>
     </ng-container>
 
