--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -85,9 +85,9 @@
           <app-patient-viral-seq [sequences]="viralSeq" [files]="viralFiles" [patientID]="patient.patientID"></app-patient-viral-seq>
         </div>
 
-        <div id="Systems-Serology">
+        <!-- <div id="Systems-Serology">
           <app-patient-serology [patient]="patient"></app-patient-serology>
-        </div>
+        </div> -->
 
       </div>
     </div>
