--- a/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
+++ b/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
@@ -1,7 +1,8 @@
 <h4 class="patient" id="demographics">demographics</h4>
 
 <div>
-  sex: <span class="variable-value" [ngClass]="patient.gender">{{ patient.gender }}</span>
+  <span class="variable-label">sex: </span>
+  <span class="variable-value" [ngClass]="patient.gender">{{ patient.gender }}</span>
   <!-- <span class="sex" [ngClass]="patient.gender">
   <span *ngIf="patient.gender === 'Female'"><i class="fas fa-venus"></i></span>
   <span *ngIf="patient.gender === 'Male'"><i class="fas fa-mars"></i></span>
