fix unknown css

--- a/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.html
+++ b/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.html
@@ -39,7 +39,7 @@
               </div>
             </div>
             <!-- explicit question mark if doesn't exist -->
-            <div class="elisa-result" *ngIf="!result" [id]="result">
+            <div class="elisa-result" *ngIf="!result" id="unknown">
               <mat-icon>help_outline</mat-icon>
             </div>
           </div>
