--- a/sample-viewer/src/app/dataset/dataset.component.html
+++ b/sample-viewer/src/app/dataset/dataset.component.html
@@ -15,9 +15,11 @@
       <!-- DATASET LOOP -->
       <div class="dataset" *ngFor="let dataset of datasets">
         <div class="dataset-header">
-          <h4><a [routerLink]="['/dataset', dataset.identifier]">{{ dataset.name }}</a>
-          <span class="keyword" *ngFor="let keyword of dataset.keywords">{{ keyword }}</span>
-        </h4>
+          <h4><a [routerLink]="['/dataset', dataset.identifier]">{{dataset.name}}</a>
+            <div class="keyword-container container">
+              <span class="keyword" *ngFor="let keyword of dataset.keywords">{{keyword}}</span>
+            </div>
+          </h4>
           <div class="dataset-description">
             {{dataset.description}}
           </div>
