fix route to documentation

--- a/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
@@ -5,7 +5,7 @@
     <h5 class="filter-sublabel">cohort</h5>
     <div class="disclaimer" matTooltip="learn more about cohorts">
       <!-- 'cohort' indicates  -->
-      <a [routerLink]="['../', 'documentation']" fragment="cohort">
+      <a [routerLink]="['/', 'documentation']" fragment="cohort">
         suspected infection/exposure, pending diagnostic confirmation
     </a>
     </div>
