--- a/sample-viewer/src/app/patient/patient.component.html
+++ b/sample-viewer/src/app/patient/patient.component.html
@@ -1,7 +1,7 @@
 <ng-container>
   <div class="page-header">
     <h1>Patients</h1>
-    <app-download-btn [data]="" filetype="patients"></app-download-btn>
+    <app-download-btn [data]="" filetype="patients" buttonLabel="patients"></app-download-btn>
   </div>
 
   <app-filter-patients></app-filter-patients>
