--- a/sample-viewer/src/app/sample/sample.component.html
+++ b/sample-viewer/src/app/sample/sample.component.html
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h1>Samples</h1>
 
-  <app-download-btn [data]="samples" filetype="samples"></app-download-btn>
+  <app-download-btn [data]="samples" filetype="samples" buttonLabel="samples"></app-download-btn>
 </div>
 
 <!-- Filters -->
