--- a/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
@@ -15,7 +15,7 @@
   <div class="filter-subtype filter-outcome">
     <h5 class="filter-sublabel">outcome</h5>
     <div class="disclaimer" matTooltip="learn more about outcomes">
-      <a [routerLink]="['../', 'documentation']" fragment="outcome">
+      <a [routerLink]="['/', 'documentation']" fragment="outcome">
       survivors were alive 10+ days after hospital admission
     </a>
     </div>
