test: windsorize hist

--- a/sample-viewer/src/app/filters/filter-sample-year/filter-sample-year.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-year/filter-sample-year.component.html
@@ -1,4 +1,4 @@
 <app-filterable-histogram [data]="data" [xDomain]="yearDomain"
 [filterSubject] = "filterSubject" [filterState$] = "filterState$"
-[filterHandler] = "filterHandler"
+[filterHandler] = "filterHandler" [windsorized] = "true"
 [endpoint]="endpoint" [filter_title]="filter_title"></app-filterable-histogram>
