--- a/sample-viewer/src/app/dataset/dataset.component.scss
+++ b/sample-viewer/src/app/dataset/dataset.component.scss
@@ -32,12 +32,18 @@
   -webkit-text-stroke-width: 1px;
 }
 
-.counts {
+.count-pair {
   background: $lassa-dk;
+  align-items: center;
+  padding: 0 10px;
+  border-radius: 5px;
+  height: 3.25em;
 }
 
 .count-value {
   color: $lassa-lt;
+  font-size: 2.5em;
+  margin-right: 15px;
 }
 
 .count-label {
@@ -46,4 +52,9 @@
 
 .dataset {
   margin-bottom: 50px;
+}
+
+.container-header {
+  align-items: center;
+  justify-content: space-between;
 }
