--- a/sample-viewer/src/app/dataset/dataset.component.html
+++ b/sample-viewer/src/app/dataset/dataset.component.html
@@ -15,7 +15,7 @@
       <!-- DATASET LOOP -->
       <div class="dataset" *ngFor="let dataset of datasets">
         <div class="dataset-header">
-          <div class="container">
+          <div class="container container-header">
             <h4 class="container-column"><a [routerLink]="['/dataset', dataset.identifier]">{{dataset.name}}</a>
               <div class="keyword-container container">
                 <span class="keyword" *ngFor="let keyword of dataset.keywords">{{keyword}}</span>
