--- a/sample-viewer/src/app/dataset/dataset.component.scss
+++ b/sample-viewer/src/app/dataset/dataset.component.scss
@@ -58,3 +58,9 @@
   align-items: center;
   justify-content: space-between;
 }
+
+svg-icon {
+  height: $icon-size;
+  width: $icon-size;
+  vertical-align: middle;
+}
