--- a/sample-viewer/src/app/dataset/dataset.component.html
+++ b/sample-viewer/src/app/dataset/dataset.component.html
@@ -16,14 +16,18 @@
       <div class="dataset" *ngFor="let dataset of datasets">
         <div class="dataset-header">
           <div class="container container-header">
-            <h4 class="container-column"><a [routerLink]="['/dataset', dataset.identifier]">{{dataset.name}}</a>
-              <div class="keyword-container container">
-                <span class="keyword" *ngFor="let keyword of dataset.keywords">{{keyword}}</span>
-              </div>
-            </h4>
 
-            <div class="container count-pair">
+            <div class="container">
               <svg-icon [icon]="dataset.identifier" [class]="dataset.identifier + '-icon'"></svg-icon>
+
+              <h4 class="container-column"><a [routerLink]="['/dataset', dataset.identifier]">{{dataset.name}}</a>
+                <div class="keyword-container container">
+                  <span class="keyword" *ngFor="let keyword of dataset.keywords">{{keyword}}</span>
+                </div>
+              </h4>
+            </div>
+            
+            <div class="container count-pair">
               <div class="count-value">
                 {{dataset.expt_count}}
               </div>
