--- a/sample-viewer/src/app/home/home.component.scss
+++ b/sample-viewer/src/app/home/home.component.scss
@@ -11,9 +11,9 @@ h1 {
 
 summary {
   margin: 13px 13px 0;
-  background: #ffffff87;
+  background: #ffffffa6;
   font-weight: 400;
-  padding: 5px 15px;
+  padding: 10px 15px;
   align-items: center;
   max-width: 600px;
 }
@@ -45,38 +45,14 @@ a {
     // margin-left: 15px;
   }
 }
-// Markdown changes
-
-/deep/ .markdown-bold {
-  font-weight: 400;
-}
-
-/deep/ a.markdown-link {
-  color: accent(900);
-}
-
-.card-warning {
-  border-top: 1px $grey-300 solid;
-  border-bottom: 1px $grey-300 solid;
-  color: $grey-400;
-  background: accent(200);
-  text-transform: uppercase;
-  padding: 3px 6px;
-  margin-bottom: 8px;
-  font-size: 0.85em;
-}
-
-.card-tbd {
-  color: accent-redder(600);
-  font-weight: 400;
-  padding-bottom: 8px;
-}
 
 .intro {
-  background-image: url("../../assets/img/IMG_9143.jpeg");
-  height: 100%;
-  padding: 50px;
+  background-image: url("../../assets/img/KGH_1600x630px.png");
+  height: 500px;
+  padding: 25px;
   background-size: cover;
+  align-items: center;
+  justify-content: space-between;
   // background-position-y: -80px;
 }
 
@@ -98,6 +74,7 @@ a {
 #cvisb-subtitle {
   font-weight: 400;
   color: white;
+  color: $default-color;
   margin: 0;
 }
 
@@ -107,6 +84,12 @@ a {
 .learn-more-link {
   display: flex;
   justify-content: center;
+}
+
+#summary-description {
+  margin: 10px 13px;
+  padding: 5px 15px;
+  font-size: 1.1em;
 }
 
 #learn-more {
@@ -244,7 +227,7 @@ i.section-icon {
 
 .about-group.container {
   margin-bottom: 50px;
-  max-width: 600px;
+  max-width: 750px;
 }
 
 .about-title {
@@ -267,6 +250,8 @@ i.section-icon {
 
 .who-are-we {
   margin-top: 50px;
+  margin-left: 55px;
+  margin-right: 55px;
 }
 
 .link-container {
