--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.scss
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.scss
@@ -1,3 +1,14 @@
 .clear-filter {
   justify-content: space-between;
 }
+
+.filter-expansion-panel {
+  margin-bottom: 3px;
+}
+
+.filter-header h3 {
+  margin: 0;
+  font-weight: 300;
+  text-transform: lowercase;
+  margin-right: 15px;
+}
