--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.scss
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.scss
@@ -6,9 +6,16 @@
   margin-bottom: 3px;
 }
 
-.filter-header h3 {
-  margin: 0;
-  font-weight: 300;
-  text-transform: lowercase;
-  margin-right: 15px;
+.filter-header {
+  flex-basis: 100%;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  align-items: center;
+
+  & h3 {
+    margin: 0;
+    font-weight: 300;
+    text-transform: lowercase;
+    margin-right: 15px;
+  }
 }
